fixed the table text not centered problem

--- a/main.css
+++ b/main.css
@@ -61,5 +61,5 @@ table {
 th,tr,td {
     border: 1px dotted black;
     padding: 10px;
-    align-content:center;/*doesn't work??*/
+    text-align:center;
 }
